--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "web mapping application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js --host"
+    "dev": "nodemon server.js --host",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
